--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /Users/yasuwaka/opt/anaconda3/bin
+home = /Users/yasuwaka/Desktop/Fasilkom/SEM 3/PBP/shopping_list/env/bin
 include-system-site-packages = false
 version = 3.9.13
